# django-package-template

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
example_project/: .env.example  README.md  manage.py
example_project/example_project/: settings.py  urls.py
package_app/: apps.py
