[build-system]
requires        = ["setuptools>=61.0.0", "wheel"]
build-backend   = "setuptools.build_meta"

[project]
name = "example-name"
version = "1.0.0"
description = "This is just an example."
readme = "README.md"
authors = [{ name = "Some Name", email = "some@mail.com" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["some", "fancy", "keywords"]
dependencies = [
    "django >= 5.2"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["python-dotenv"]

[project.urls]
Homepage = "https://some-url.com"

[tool.setuptools.packages.find]
exclude = ["example_project"]

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_Version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.filepatterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"other/file.py" = ["{version}"]
